--- a/app/src/main/res/layout/fragment_recipe.xml
+++ b/app/src/main/res/layout/fragment_recipe.xml
@@ -71,7 +71,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/textView2" />
 
-    <com.todkars.shimmer.ShimmerRecyclerView
+    <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/foodRecyclerView"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -80,7 +80,5 @@
         app:layout_constraintEnd_toEndOf="@+id/typeRecyclerView"
         app:layout_constraintStart_toStartOf="@+id/typeRecyclerView"
         app:layout_constraintTop_toBottomOf="@+id/typeRecyclerView"
-        app:shimmer_recycler_item_count="4"
-        app:shimmer_recycler_layout="@layout/food_item_shimmer_layout"
         tools:ignore="SpeakableTextPresentCheck" />
 </androidx.constraintlayout.widget.ConstraintLayout>
